# MSVoiceChange

./: readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/meishe/msvoicechange/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/meishe/msvoicechange/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/meishe/msvoicechange/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
